# echo-roots

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_UPDATE_SUMMARY.md  IMPLEMENTATION_TRACKER.md  LAYER_D_STATUS_ANALYSIS.md  LICENSE.md  LLM_INTEGRATION_GUIDE.md  QDRANT_IMPLEMENTATION_PLAN.md  README.md  SCAFFOLD_COMPLETE.md  SECURITY.md  T1_COMPLETE.md  T2_COMPLETE.md  T3_COMPLETE.md  T4_COMPLETE.md  class_diagram.puml  demo_qdrant_integration.py  demo_vllm.py  llm_api_integration.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run_real_llm.py  setup_llm_integration.py  test_data_processing.py  test_gemini_api.py  test_gemini_integration.py  test_llm_api.py  test_llm_architecture.py  test_llm_extraction.py  test_vllm_integration.py
.copilot/: context.md  prompts.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: llm_config.yaml  qdrant_config.yaml
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: ARCHITECTURE.md  DATA_SCHEMA.md  EVALUATION.md  LICENSES.md  NEO4J_IMPLEMENTATION_STATUS.md  OPERATIONS.md  OVERVIEW.md  QDRANT_DEPLOYMENT.md  ROADMAP.md  T10_CLI_API_INTERFACE.md  T11_GOVERNANCE_MONITORING.md  T5_COMPLETE.md  T6_COMPLETE.md  T7_COMPLETE.md  T8_COMPLETE.md  T9_RETRIEVAL_INTERFACE.md  TAXONOMY.md  TECH_STACK.md
docs/DECISIONS/: ADR-0001-taxonomy-storage.md  ADR-template.md  SCAFFOLD-T0-PATCH.md
docs/PROMPTS/: coding-agent.md  datasets-and-eval.md  elevation-judge.md  normalization.md  retrieval-and-ranking.md  taxonomy-extraction.md
docs/guides/: NEO4J_SETUP.md  gemini-integration.md  vllm-integration.md
docs/knowledge_base/: index.html
domains/ecommerce/: domain.yaml
domains/ecommerce/categories/: taxonomy.yaml
scripts/: dev.py  setup.py
src/echo_roots/: __init__.py
src/echo_roots/cli/: __init__.py  api_server.py  main.py
src/echo_roots/documentation/: __init__.py
src/echo_roots/domain/: __init__.py  adapter.py  loader.py  merger.py
src/echo_roots/governance/: __init__.py
src/echo_roots/models/: __init__.py  core.py  domain.py  taxonomy.py
src/echo_roots/pipelines/: __init__.py  extraction.py  gemini_client.py  ingestion.py  llm_factory.py  openai_client.py  validation.py  vllm_client.py
src/echo_roots/retrieval/: __init__.py
src/echo_roots/semantic/: __init__.py  embedding_providers.py  graph.py  pipeline.py  search.py
src/echo_roots/storage/: __init__.py  duckdb_backend.py  hybrid_manager.py  interfaces.py  migrations.py  neo4j_backend.py  qdrant_backend.py  repository.py
src/echo_roots/taxonomy/: __init__.py  graph_queries.py  manager.py  navigator.py
src/echo_roots/vocabulary/: __init__.py  manager.py  navigator.py
tests/: conftest.py  test_domain_adapter.py  test_neo4j_integration.py  test_qdrant_integration.py  test_setup.py  test_t10_cli_api.py  test_t10_cli_api_simplified.py  test_t11_governance.py  test_t12_documentation.py  test_t3_basic.py  test_t3_extraction.py  test_t3_fixed.py  test_t5_ingestion.py  test_t5_simple.py  test_t6_taxonomy_management.py  test_t7_vocabulary_management.py  test_t8_semantic_enrichment.py  test_t9_retrieval_interface.py
tests/fixtures/: sample_ingestion_data.json  test_domain.yaml
tests/test_domain/: __init__.py
tests/test_models/: __init__.py  test_core.py  test_domain.py  test_taxonomy.py
tests/test_pipelines/: __init__.py
tests/test_storage/: __init__.py  test_basic_storage.py  test_storage.py
